style black underline, fix header z-index

--- a/src/scss/components/_c-header.scss
+++ b/src/scss/components/_c-header.scss
@@ -49,6 +49,19 @@
             transform: translate(50%, -50%);
         }
 
+        &--black {
+            border-color: $black;
+
+            &::before {
+                background-color: $black;
+            }
+
+            &::after {
+                background-color: $black;
+            }
+
+        }
+
 
     }
 
