--- a/src/scss/layouts/_l-header.scss
+++ b/src/scss/layouts/_l-header.scss
@@ -5,7 +5,7 @@
     color: $white;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 4;
 
     &__wrapper {
         display: flex;
